--- a/build.gradle
+++ b/build.gradle
@@ -5,29 +5,22 @@
  */
 
 plugins {
-    // Apply the Kotlin JVM plugin to add support for Kotlin.
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-
-    // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
 }
 
 repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
+    mavenCentral()
     jcenter()
+    maven { url "https://dl.bintray.com/arrow-kt/arrow-kt/" }
 }
 
 dependencies {
-    // Align versions of all Kotlin components
     implementation platform('org.jetbrains.kotlin:kotlin-bom')
-
-    // Use the Kotlin JDK 8 standard library.
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-
-    // Use the Kotlin test library.
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
-
-    // Use the Kotlin JUnit integration.
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+
+    implementation "io.arrow-kt:arrow-core:0.10.5"
+    implementation "io.arrow-kt:arrow-syntax:0.10.5"
 }
