--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,12 @@ dependencies {
     // Google Guava library is used for it's SHA256 hashing function
     implementation "com.google.guava:guava:29.0-jre"
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+    kotlinOptions {
+        languageVersion = "1.4"
+        apiVersion = "1.4"
+        jvmTarget = "1.8"
+        javaParameters = true
+    }
+}
